<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/horizontal_margin_8"
    android:background="@drawable/btn_bg_curved_stroke"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/rv_work_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rv_work_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/meta_facebook_inc"
            android:textColor="@color/mater_grey_900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rv_work_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virtual_reality_content_engineer"
            android:textColor="@color/mater_grey_700"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rv_work_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2020_present"
            android:textColor="@color/mater_grey_700"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>